--- a/style.css
+++ b/style.css
@@ -2,46 +2,57 @@
     margin: 0;
     padding: 0;
     font-family: "Comic Sans MS";
-    font-size: 120%;
-    background-color:rgb(241, 247, 255) ;
+    /*background-color:rgb(241, 247, 255) ;*/
 }
-.navigaatio {
-    list-style-type: none;
+
+html, body{
+    width: 100%;
+    height: 100%;
     overflow: hidden;
-    background-color: #1ed397;
-    height: 100px;
 }
 
-#logo{
-    display: block;
-    background-color: blueviolet;
-    float: left;
-    height: 100px;
-    width: 10%;
+body{
+    background-image: linear-gradient( #ffffff, #280128);
+    background-image: linear-gradient( #ffffff, #2998c8);
+    overflow: auto;
 }
 
-#logo img{
+img{
     height: 100%;
     width: 100%;
 }
+.navigaatio {
+    list-style-type: none;
+    overflow: visible;
+    background-color: #1ed397;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    font-size: 250%
+}
 
+#logo{
+    height: 100%;
+    width: 10%;
+}
 
 .navigaatio a {
-    display: block;
     color: rgb(143, 38, 38);
     background-color:#1ed397;
-    text-align: center;
-    padding: 14px 16px;
+    padding: 0px 16px;
     text-decoration: none;
+    display: block;
     height: 100px;
     float: right;
+    display: flex;
+    align-items: center;
 }
 
 .navigaatio a:hover{
     color: red;
 }
 
-.chosen{
+#chosen{
     background-color: bisque;
 }
 
@@ -52,48 +63,60 @@
 
 
 #title{
-    font-size: 200%;
-    margin-top: 10%;
+    font-size: 250%;
+    margin-top: 7%;
     text-align:center;
 }
 
 .mainpic{
-    display: block;
     margin: auto;
-    width: 80%;
-    height: 400px;
-    background-color: blueviolet;
-    /*
-    background-image: url("jotaro.jpg");
-    */
-}
-
-.mainpic img{
-    height: 100%;
-    width: 100%;
+    width: 90vw;
+    height: 60vh;
 }
 
 .main-text{
-    width:80%;
+    width:70%;
+    margin: 30px auto;
+    font-size: 120%
+}
+
+.productpic{
     margin: auto;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    width: 95%;
+    height: 400px;
+}
+
+.product-text{
+    width:95%;
+    margin: 40px auto;
+    font-size: 120%;
 }
 
 .products{
     display: flex;
     justify-content: space-evenly;
+    height: 1000px;
 }
 
 .product{
-    background-color:blueviolet;
-    width: 10%;
+    background-color:rgb(109, 145, 246);
+    width: 30%;
+}
+
+.product h3{
+    margin: 40px 50px 20px;
+    width: 90%;
+    font-size: 200%;
+}
+
+.product div{
+    height: 50%;
+    width: 90%;
+    margin: 0px auto;
 }
 
 .product p{
-    background-color:blueviolet;
-}
-
-.product img{
-    max-width: 100%;
+    margin: 50px 50px 10px;
+    height: 25%;
+    font-size: 120%;
 }
